finshed my form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="max-w-6xl mx-auto">
@@ -21,7 +21,7 @@
     <nav class="bg-sky-950">
         <ul class="flex flex-col sm:flex-row sm:border-b">
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
-            <a href="#" class="block py-2 px-3">Tents</a>
+            <a href="" class="block py-2 px-3">Tents</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="#" class="block py-2 px-3">Men</a>
@@ -30,7 +30,7 @@
             <a href="#" class="block py-2 px-3">Snowboards</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="#" class="block py-2 px-3">Skis</a>
+            <a href="cart.html" class="block py-2 px-3">Cart</a>
             </li>
         </ul>
     </nav>
