Update cart, home, and index HTML files

--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
     <nav class="bg-sky-950">
         <ul class="flex flex-col sm:flex-row sm:border-b">
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="2620-hero-cards/home.html" class="block py-2 px-3">home</a>
+            <a href="home.html" class="block py-2 px-3">home</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="index.html" class="block py-2 px-3">Tents</a>
@@ -31,6 +31,9 @@
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="#" class="block py-2 px-3">Snowboards</a>
+            </li>
+            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
+            <a href="#" class="block py-2 px-3">Skis</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
             <a href="cart.html" class="block py-2 px-3">Cart</a>
