--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav class="bg-sky-950">
         <ul class="flex flex-col sm:flex-row sm:border-b">
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
+            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="home.html" class="block py-2 px-3">Home</a>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
             <a href="" class="block py-2 px-3">Tents</a>
@@ -30,6 +30,9 @@
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="#" class="block py-2 px-3">Snowboards</a>
+            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
+            <a href="#" class="block py-2 px-3">Skis</a>
+            </li>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="cart.html" class="block py-2 px-3">Cart</a>
