finished with snowboard cards

--- a/snowboards.html
+++ b/snowboards.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
+    <link rel="stylesheet" href="styles.css">
 <body>
     <div class="max-w-6xl mx-auto">
     <header class="grid grid-cols-[auto_44px_44px] gap-2 p-2 border-b">
@@ -42,7 +41,7 @@
 
     <main>
          <h1 class="text-sky-950 text-2xl px-2 py-3">Snowboards</h1>
-        <section id="card-container" class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 p-6">
+        <section id="card-container" class="grid sm:grid-cols-2 lg:grid-cols-3 max-w-screen-xl mx-auto">
         </section>
     </main>
     
