--- a/cart.html
+++ b/cart.html
@@ -26,14 +26,10 @@
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
             <a href="index.html" class="block py-2 px-3">Tents</a>
             </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="#" class="block py-2 px-3">Men</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="#" class="block py-2 px-3">Snowboards</a>
+            <a href="snowboards.html" class="block py-2 px-3">Snowboards</a>
             </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="#" class="block py-2 px-3">Skis</a>
             </li>
             <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
             <a href="cart.html" class="block py-2 px-3">Cart</a>
