--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore More Webesite</title>
+    <title>Explore More Website</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -12,56 +12,40 @@
 </head>
 <body>
     <div class="max-w-6xl mx-auto">
-    <header class="grid grid-cols-[auto_44px_44px] gap-2 p-2 border-b">
-        <img class="w-40 h=20" src="images/2620logo.svg">
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/person-circle.svg"></a>
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/cart-fill.svg"></a>
-    </header>
-
-    <nav class="bg-sky-950">
-        <ul class="flex flex-col sm:flex-row sm:border-b">
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="home.html" class="block py-2 px-3">Home</a>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
-            <a href="" class="block py-2 px-3">Tents</a>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="snowboards.html" class="block py-2 px-3">Snowboards</a>
-            </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="cart.html" class="block py-2 px-3">Cart</a>
-            </li>
-        </ul>
-    </nav>
-
-    <main>
-        <h1 class="text-sky-950 text-2xl px-2 py-3">Tent</h1>
-        <div class="md:flex">
-            <section class="md:w-1/3">
-                <img class="w-full h-auto md:w-94 h-141" src="images/shopping.webp">
-            </section>
-
-            <section class="m-2 md:w-1/2">
-                <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6 md:mt-0">Title:</h2>
-                <p class="">SummitTrail™ 4-Season Waterproof Camping Tent</p>
-                <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Description:</h2>
-                <p class="">Get ready for your next adventure with the SummitTrail™ 4-Season Waterproof Camping Tent — built for durability, comfort, and protection in any weather. Whether you're heading into the mountains, forest, or beach, this tent features a quick-setup design, reinforced seams, and a waterproof, UV-resistant outer shell. With breathable mesh panels and a spacious interior, it's ideal for campers who value convenience and performance.</p>
-                <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Sizes</h2>
-                <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">2 person</button>
-                <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">4 Person</button>
-                <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">6 person</button>
-                <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">8 person</button>
-                <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Price:</h2>
-                <p class="">$250.00</p>
-                <button class="bg-slate-950 hover:bg-sky-950 text-slate-50 font-medium py-2 px-4 m-2 rounded">Add to Cart</button>
-            </section>
-        </div>
-    </main>
-    
-    <footer>
-        <p class="text-center text-sm text-zinc-500">&copy; Lehi Corona &bull; DWDD 2620</p>
-    </footer>
-
+        <!-- Empty header for modules -->
+        <header></header>
+        <!-- Empty nav for nav -->
+        <nav></nav>
         
-</div>
+        <main>
+            <h1 class="text-sky-950 text-2xl px-2 py-3">Tents</h1>
+            <img src="images/pexels-goumbik-1309584.webp" alt="tents" class="width-full">
+            <h2 class="text-sky-950 text-2xl px-2 py-3">Inventory</h2>
+            <div class="md:flex">
+                <section class="md:w-1/3">
+                    <img class="w-full h-auto md:w-94 h-141" src="images/shopping.webp" alt="Tent product image">
+                </section>
+
+                <section class="m-2 md:w-1/2">
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6 md:mt-0">Title:</h2>
+                    <p>SummitTrail™ 4-Season Waterproof Camping Tent</p>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Description:</h2>
+                    <p>Get ready for your next adventure with the SummitTrail™ 4-Season Waterproof Camping Tent — built for durability, comfort, and protection in any weather. Whether you're heading into the mountains, forest, or beach, this tent features a quick-setup design, reinforced seams, and a waterproof, UV-resistant outer shell. With breathable mesh panels and a spacious interior, it's ideal for campers who value convenience and performance.</p>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Sizes</h2>
+                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">2 person</button>
+                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">4 Person</button>
+                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">6 person</button>
+                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">8 person</button>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Price:</h2>
+                    <p>$250.00</p>
+                    <button class="bg-slate-950 hover:bg-sky-950 text-slate-50 font-medium py-2 px-4 m-2 rounded">Add to Cart</button>
+                </section>
+            </div>
+        </main>
+        <!--Empty footer for modules-->
+        <footer></footer>
+    </div>
+    <!--script for modules-->
+    <script type="module" src="./cards.js"></script>
 </body>
 </html>
