--- a/home.html
+++ b/home.html
@@ -12,39 +12,20 @@
 </head>
 <body>
     <div class="max-w-6xl mx-auto">
-    <header class="grid grid-cols-[auto_44px_44px] gap-2 p-2 border-b">
-        <img class="w-40 h=20" src="images/2620logo.svg">
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/person-circle.svg"></a>
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/cart-fill.svg"></a>
-    </header>
-
-    <nav class="bg-sky-950">
-        <ul class="flex flex-col sm:flex-row sm:border-b">
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400 bg-slate-400">
-            <a href="home.html" class="block py-2 px-3">Home</a>
-            </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="index.html" class="block py-2 px-3">Tents</a>
-            </li>
-            </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="snowboards.html" class="block py-2 px-3">Snowboards</a>
-            </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-                <a href="cart.html" class="block py-2 px-3">Cart
-                </a>
-                </li>
-        </ul>
-    </nav>
+    <!--Empty header for module-->
+    <header></header>
+    <!--Empty nav for module-->
+    <nav></nav>
     <main class="max-w-screen-xl m-auto">
     <!-- Responsive Hero Images -->
+    <h1 class="text-sky-950 text-2xl px-2 py-4">Home</h1>
     <picture class="w-full relative">
         <source media="(max-width: 320)" srcset="images/hero320.jpg">
         <source media="(max-width: 768)" srcset="images/hero768.jpg">
         <img class src="images/hero1280.jpg" alt="mountains">
         <a class="text-white absolute bottom-4 right-4 bg-slate-400 py-2 px-2 border-sky-950 rounded border drop-shadow-lg hover:bg-gray-600" href="#">View inventory</a>
     </picture>
-    <h1 class="text-sky-700 text-2xl px-2 py-4">Home</h1>
+    <h2 class="text-sky-950 text-2xl px-2 py-4">Shop Now</h>
     <!-- Start of Cards-->
     <section class="cards">
         <div>
@@ -72,9 +53,10 @@
     </section>
     
     </main>
-    <footer>
-        <p class="text-center text-sm text-zinc-500">&copy; Lehi Corona &bull; DWDD 2620 &bull; <span id="theYear"></span></p>
-    </footer>
+    <!--Empty footer for modules-->
+    <footer></footer>
     <script src="tailwind.config.js"></script>
+     <!--script for for modules-->
+    <script type="module" src="./cards.js"></script>
 </body>
 </html>
