--- a/snowboards.html
+++ b/snowboards.html
@@ -11,34 +11,22 @@
     <link rel="stylesheet" href="styles.css">
 <body>
     <div class="max-w-6xl mx-auto">
-    <header class="grid grid-cols-[auto_44px_44px] gap-2 p-2 border-b">
-        <img class="w-40 h=20" src="images/2620logo.svg">
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/person-circle.svg"></a>
-        <a class="border w-11 h-11 flex justify-around rounded-full hover:bg-slate-100" href="#"><img class="w-4" src="images/cart-fill.svg"></a>
-    </header>
-
-    <nav class="bg-sky-950">
-        <ul class="flex flex-col sm:flex-row sm:border-b">
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="home.html" class="block py-2 px-3">Home</a>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="index.html" class="block py-2 px-3">Tents</a>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400  bg-slate-400">
-            <a href="snowboards.html" class="block py-2 px-3">Snowboards</a>
-            </li>
-            <li class="text-slate-50 border-b border-neutral-700 sm:border-b-0 hover:bg-slate-400">
-            <a href="cart.html" class="block py-2 px-3">Cart</a>
-            </li>
-        </ul>
-    </nav>
+    <!-- Empty Header for modules -->
+    <header></header>
+    <!-- Empty nav for modules -->
+    <nav></nav>
 
     <main>
-         <h1 class="text-sky-950 text-2xl px-2 py-3">Snowboards</h1>
+        <h1 class="text-sky-950 text-2xl px-2 py-3">Snowboards</h1>
+        <img src="images/pexels-fede-roveda-1461538-3869851.webp" alt="guy snowboarding" class="width-full">
+        <h2 class="text-sky-950 text-2xl px-2 py-3">Inventory</h2>
         <section id="card-container" class="grid sm:grid-cols-2 lg:grid-cols-3 max-w-screen-xl mx-auto">
         </section>
     </main>
-    
+    <!--Script for modules-->
     <script type="module" src="./cards.js"></script>
+    <!-- Empty footer for modules -->
+    <footer></footer>
 
 
     
