--- a/snowboards.html
+++ b/snowboards.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400..700&family=IBM+Plex+Mono:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 <body>
     <div class="max-w-6xl mx-auto">
@@ -16,7 +19,7 @@
     <!-- Empty nav for modules -->
     <nav></nav>
 
-    <main>
+    <main class="--font-arimo">
         <h1 class="text-sky-950 text-2xl px-2 py-3">Snowboards</h1>
         <img src="images/pexels-fede-roveda-1461538-3869851.webp" alt="guy snowboarding" class="width-full">
         <h2 class="text-sky-950 text-2xl px-2 py-3">Inventory</h2>
