--- a/index.html
+++ b/index.html
@@ -8,37 +8,40 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400..700&family=IBM+Plex+Mono:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="--font-arimo">
     <div class="max-w-6xl mx-auto">
         <!-- Empty header for modules -->
         <header></header>
         <!-- Empty nav for nav -->
-        <nav></nav>
+        <nav class="border-b-2 border-gray-30"></nav>
         
         <main>
-            <h1 class="text-sky-950 text-2xl px-2 py-3">Tents</h1>
+            <h1 class="text-sky-950 text-3xl px-2 py-3">Tents</h1>
             <img src="images/pexels-goumbik-1309584.webp" alt="tents" class="width-full">
             <h2 class="text-sky-950 text-2xl px-2 py-3">Inventory</h2>
             <div class="md:flex">
                 <section class="md:w-1/3">
                     <img class="w-full h-auto md:w-94 h-141" src="images/shopping.webp" alt="Tent product image">
                 </section>
-
+                
                 <section class="m-2 md:w-1/2">
-                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6 md:mt-0">Title:</h2>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-30 mt-6 md:mt-0">Title:</h2>
                     <p>SummitTrail™ 4-Season Waterproof Camping Tent</p>
-                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Description:</h2>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-30 mt-6">Description:</h2>
                     <p>Get ready for your next adventure with the SummitTrail™ 4-Season Waterproof Camping Tent — built for durability, comfort, and protection in any weather. Whether you're heading into the mountains, forest, or beach, this tent features a quick-setup design, reinforced seams, and a waterproof, UV-resistant outer shell. With breathable mesh panels and a spacious interior, it's ideal for campers who value convenience and performance.</p>
-                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Sizes</h2>
-                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">2 person</button>
-                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">4 Person</button>
-                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">6 person</button>
-                    <button class="bg-sky-950 hover:bg-slate-700 text-slate-50 font-medium py-2 px-4 m-2 rounded">8 person</button>
-                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-100 mt-6">Price:</h2>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-30 mt-6">Sizes</h2>
+                    <button class="bg-sky-dark hover:bg-sky text-white font-medium py-2 px-4 m-2 rounded transition">2 person</button>
+                    <button class="bg-sky-dark hover:bg-sky text-white font-medium py-2 px-4 m-2 rounded transition">4 Person</button>
+                    <button class="bg-sky-dark hover:bg-sky text-white font-medium py-2 px-4 m-2 rounded transition">6 person</button>
+                    <button class="bg-sky-dark hover:bg-sky text-white font-medium py-2 px-4 m-2 rounded transition">8 person</button>
+                    <h2 class="text-sky-950 text-xs font-bold uppercase border-b-2 border-gray-30 mt-6">Price:</h2>
                     <p>$250.00</p>
-                    <button class="bg-slate-950 hover:bg-sky-950 text-slate-50 font-medium py-2 px-4 m-2 rounded">Add to Cart</button>
+                    <button class="bg-sky hover:bg-sky-dark text-white font-medium py-2 px-4 m-2 rounded transition">Add to Cart</button>
                 </section>
             </div>
         </main>
